# agent-guardian

./: .cursorrules  .env.example  .gitignore  LICENSE  Makefile  PRODUCT_BRIEF.md  README.md  docker-compose.yml  pyproject.toml
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ActionFeed.tsx  RiskChart.tsx  RollbackButton.tsx
dashboard/src/lib/: api.ts
docker/: Dockerfile  Dockerfile.sandbox
examples/: demo_destroyer.py  demo_leaker.py  demo_undo.py  langchain_demo.py  quickstart_no_agent.py
scripts/: verify.ps1
src/agent_guardian/: __init__.py  cli.py  config.py  demos.py
src/agent_guardian/api/: main.py  models.py
src/agent_guardian/api/routes/: actions.py  approvals.py  rollback_route.py
src/agent_guardian/core/: __init__.py  approver.py  audit.py  interceptor.py  policy.py  risk_scorer.py  rollback.py  rule_engine.py  simulator.py
tests/: conftest.py  test_api.py  test_approver.py  test_interceptor.py  test_policy.py  test_risk_scorer.py  test_rollback.py  test_simulator.py
